[gd_scene load_steps=32 format=3 uid="uid://cxw5cllo4rcae"]

[ext_resource type="Texture2D" uid="uid://c3vgcfn1kuxgc" path="res://PlayerCars/LUXURY_GAME/Black_LUXURY_CLEAN_All_000-sheet.png" id="1_8atol"]
[ext_resource type="Texture2D" uid="uid://djoa44w63fk06" path="res://Textures/Icons/heartIcon.png" id="1_8817i"]
[ext_resource type="Script" path="res://scripts/CarSlot.gd" id="1_ncxy4"]
[ext_resource type="Texture2D" uid="uid://bj76w33q01sva" path="res://Backgrounds/sun.png" id="1_yx3t4"]
[ext_resource type="Texture2D" uid="uid://dbfu1yb4sx6e" path="res://PlayerCars/SPORT_GAME/Red_SPORT_CLEAN_All_000-sheet.png" id="2_830o8"]
[ext_resource type="FontFile" uid="uid://b8cicreo266ae" path="res://PressStart2P-Regular.ttf" id="3_kmg6p"]
[ext_resource type="Texture2D" uid="uid://b88wpt6xejoua" path="res://Textures/coin1_16x16.png" id="4_nqp76"]
[ext_resource type="Theme" uid="uid://b4ohoegmxa8ud" path="res://CarSlotButton.tres" id="6_mksc8"]
[ext_resource type="Texture2D" uid="uid://drmvds3i6afqy" path="res://Textures/Icons/speedIcon.png" id="7_k56i6"]
[ext_resource type="Texture2D" uid="uid://c7gyc3kpoaae2" path="res://Textures/Icons/SteeringWheelIcon.png" id="10_18ug5"]

[sub_resource type="Animation" id="Animation_2hyma"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CarSrpite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_lrdt5"]
resource_name = "Rotating"
length = 4.7
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CarSrpite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6, 3.7, 3.8, 3.9, 4, 4.1, 4.2, 4.3, 4.4, 4.5, 4.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ej265"]
_data = {
"RESET": SubResource("Animation_2hyma"),
"Rotating": SubResource("Animation_lrdt5")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_krisp"]
atlas = ExtResource("4_nqp76")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_al3y3"]
atlas = ExtResource("4_nqp76")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8emph"]
atlas = ExtResource("4_nqp76")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yea76"]
atlas = ExtResource("4_nqp76")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_sqljc"]
atlas = ExtResource("4_nqp76")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_i6lwh"]
atlas = ExtResource("4_nqp76")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jyxdc"]
atlas = ExtResource("4_nqp76")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_d6cl6"]
atlas = ExtResource("4_nqp76")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jt5co"]
atlas = ExtResource("4_nqp76")
region = Rect2(128, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7u2bd"]
atlas = ExtResource("4_nqp76")
region = Rect2(144, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jkd2t"]
atlas = ExtResource("4_nqp76")
region = Rect2(160, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lo6tu"]
atlas = ExtResource("4_nqp76")
region = Rect2(176, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lny3n"]
atlas = ExtResource("4_nqp76")
region = Rect2(192, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_vk5sv"]
atlas = ExtResource("4_nqp76")
region = Rect2(208, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_vuqjn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_krisp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_al3y3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8emph")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yea76")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sqljc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i6lwh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jyxdc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d6cl6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jt5co")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7u2bd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jkd2t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lo6tu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lny3n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vk5sv")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_crg0i"]
bg_color = Color(0.439216, 0.690196, 0.960784, 1)
border_width_bottom = 15
border_color = Color(0.196078, 0.521569, 0.839216, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="Theme" id="Theme_fc17j"]
default_font = ExtResource("3_kmg6p")
default_font_size = 64
Button/colors/font_outline_color = Color(0.0313726, 0.392157, 0.65098, 1)
Button/constants/outline_size = 10
Button/styles/normal = SubResource("StyleBoxFlat_crg0i")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_br5og"]
bg_color = Color(0.866268, 0.714416, 0.0982224, 1)
border_width_bottom = 15
border_color = Color(0.788185, 0.416157, 0.0877121, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="CarSlot" type="Control"]
layout_mode = 3
anchor_left = 0.186
anchor_top = 0.136
anchor_right = 0.546
anchor_bottom = 0.827
offset_left = 266.728
offset_top = 210.872
offset_right = -147.992
offset_bottom = -236.896
scale = Vector2(2.5, 2.5)
script = ExtResource("1_ncxy4")
txt = ExtResource("2_830o8")

[node name="Sun" type="Sprite2D" parent="."]
position = Vector2(-24.4, -0.800001)
scale = Vector2(8, 7)
texture = ExtResource("1_yx3t4")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ej265")
}
autoplay = "Rotating"

[node name="CarSrpite" type="Sprite2D" parent="."]
position = Vector2(-21.6, -1.90735e-06)
texture = ExtResource("1_8atol")
hframes = 7
vframes = 7

[node name="CarName" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -92.0
offset_top = -60.0
offset_right = 398.0
offset_bottom = 24.0
scale = Vector2(0.3, 0.3)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0.152941, 0.152941, 0.152941, 1)
theme_override_colors/font_outline_color = Color(0.054902, 0.0313726, 0, 0.247059)
theme_override_constants/outline_size = 25
theme_override_fonts/font = ExtResource("3_kmg6p")
theme_override_font_sizes/font_size = 70
text = "CARNAME"
horizontal_alignment = 1

[node name="BuyButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -72.0
offset_top = 58.0
offset_right = 458.0
offset_bottom = 216.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.2, 0.2)
theme = ExtResource("6_mksc8")
text = "9

"
alignment = 0

[node name="Coin2" type="AnimatedSprite2D" parent="BuyButton"]
position = Vector2(461.333, 66.6666)
scale = Vector2(6.25, 5.25)
sprite_frames = SubResource("SpriteFrames_vuqjn")
autoplay = "default"
frame_progress = 0.114978

[node name="SelectButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -71.6
offset_top = 59.2
offset_right = 451.4
offset_bottom = 213.2
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.2, 0.2)
theme = SubResource("Theme_fc17j")
theme_override_font_sizes/font_size = 48
text = "SELECT"

[node name="UpgradeButton" type="Button" parent="."]
layout_mode = 0
offset_left = -55.6
offset_top = -90.0
offset_right = 294.4
offset_bottom = 10.0
scale = Vector2(0.2, 0.2)
theme = SubResource("Theme_fc17j")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_br5og")
text = "UPGRADE
"

[node name="Lifes" type="Label" parent="."]
z_index = 1
layout_mode = 0
offset_left = -80.0
offset_top = 40.0
offset_right = -52.0
offset_bottom = 63.0
theme_override_fonts/font = ExtResource("3_kmg6p")
text = "2
"
horizontal_alignment = 1

[node name="LifesIcon" type="TextureRect" parent="Lifes"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.157
anchor_top = 0.291
anchor_right = 0.157
anchor_bottom = 0.291
offset_left = -27.596
offset_top = -12.693
offset_right = 0.403999
offset_bottom = 10.307
grow_vertical = 2
texture = ExtResource("1_8817i")

[node name="Speed" type="Label" parent="."]
z_index = 1
layout_mode = 0
offset_left = -20.0
offset_top = 40.0
offset_right = 8.0
offset_bottom = 63.0
theme_override_fonts/font = ExtResource("3_kmg6p")
text = "2
"
horizontal_alignment = 1

[node name="SpeedIcon" type="TextureRect" parent="Speed"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.229
anchor_top = 0.226
anchor_right = 0.229
anchor_bottom = 0.226
offset_left = -24.012
offset_top = -11.998
offset_right = 15.988
offset_bottom = 28.002
scale = Vector2(0.6, 0.6)
texture = ExtResource("7_k56i6")

[node name="Handling" type="Label" parent="."]
z_index = 1
layout_mode = 0
offset_left = 30.0
offset_top = 40.0
offset_right = 58.0
offset_bottom = 56.0
theme_override_fonts/font = ExtResource("3_kmg6p")
text = "2
"
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="Handling"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.186
anchor_top = 0.275
anchor_right = 0.186
anchor_bottom = 0.275
offset_left = -24.408
offset_top = -11.2
offset_right = 15.592
offset_bottom = 28.8
scale = Vector2(0.6, 0.6)
texture = ExtResource("10_18ug5")

[connection signal="pressed" from="BuyButton" to="." method="_on_buy_button_pressed"]
[connection signal="pressed" from="SelectButton" to="." method="_on_select_button_pressed"]
[connection signal="pressed" from="UpgradeButton" to="." method="_on_upgade_button_pressed"]
